--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,1 @@
-﻿PORT=3000
-JWT_SECRET=secret_key_change_me
-DATABASE_URL=file:./dev.db
+DATABASE_URL=postgresql://postgres:9qrdzyi47bpe8nl5@db.eksxveygtargshnmctjx.supabase.co:5432/postgres
