--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,11 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/api/index.js"
+            "destination": "/server/index.js"
         },
         {
             "source": "/uploads/(.*)",
-            "destination": "/api/index.js"
+            "destination": "/server/index.js"
         },
         {
             "source": "/(.*)",
